Image file serving fail

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
-    Hi HTTP2
+    <h1>Hi HTTP2</h1>
+    Image load test <img src="./images/image.jpg" alt="sample image" />
   </body>
 </html>
